# llm_homology_api

./: .docker_compose_env  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
llm_homology_api/: __init__.py
llm_homology_api/src/: factory.py  ss_factory.py
llm_homology_api/src/clients/: CachedAuthClient.py  __init__.py
llm_homology_api/src/config/: __init__.py  config.py
llm_homology_api/src/dependencies/: embedder.py  middleware.py
llm_homology_api/src/models/: request_models.py  response_models.py
llm_homology_api/src/routes/: __init__.py  admin.py  cache.py  gpu.py  similarity.py  status.py
scripts/: .coverage  README.md  dev_run_development_server.sh  dev_run_docker_compose.sh  entrypoint.sh  run_development_server.sh  run_docker_compose.sh  run_tests.sh  setup_experiment.py
scripts/deployment/: dev_run_docker_compose.sh  run_dev_kg02-p.py  run_dev_kg02-p.sh
scripts/development/: kg02-p.sh.env  run_dev_kg02-p.sh  run_dev_kg02-p_for_pycharm.py  run_dev_on_kg02.py
scripts/tests/: dev_kg02-p.env  run_tests.py  run_tests.sh  tests.env
tests/: .env  conftest.py  run_pytest.py
tests/data/: MAQNRNSTGYA_1280.json  MAQNRNSTGYA_320.json  NLYIQWLKDGGPSSGRPPPS_1280.json  NLYIQWLKDGGPSSGRPPPS_320.json
tests/integration/: generate_embeddings.py  large_request.sh
tests/src/: test_factory.py  test_ss_factory.py
tests/src/dependencies/: test_embedder.py
tests/src/routes/: test_similarity.py
