[tool.poetry]
name = "llm-homology-api"
version = "0.1.0"
description = ""
authors = ["Boris <bio-boris@github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.28.0" }
pydantic-settings = "^2.1.0"
requests = "^2.31.0"
cacheout = "^0.16.0"
faiss-gpu = { version = "^1.7.2", platform = "linux" }
protein-search = { git = "https://github.com/braceal/protein-search.git", rev = "main" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
black = "^24.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
